# FluxPrompt

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  docs.yml  release.yml  security.yml
benches/: detection_benchmarks.rs
docs/: FAQ.md  README.md  RELEASING.md  api_reference.md  architecture.md  detection_methods.md  security_guidelines.md
examples/: async_processing.rs  basic_detection.rs  claude_self_test.rs  complete_demo.rs  comprehensive_validation.rs  custom_rules.rs  interactive_demo.rs  level_calibration.rs  metrics_monitoring.rs  ollama_integration.rs  policy_enforcement.rs  response_validation.rs  security_level_demo.rs  validate_responses.rs
examples/custom_configs/: advanced_multi_layer_config.rs  basic_custom_config.rs  config_inheritance.rs  domain_specific_configs.rs  dynamic_config_switching.rs  fluxprompt_integration.rs
scripts/: run_ollama_demo.sh  run_tests.sh
src/: config.rs  config_builder.rs  custom_config.rs  error.rs  features.rs  lib.rs  metrics.rs  presets.rs  types.rs  utils.rs
src/detection/: engine.rs  heuristic.rs  mod.rs  patterns.rs  semantic.rs
src/mitigation/: engine.rs  mod.rs  sanitization.rs  strategies.rs
tests/: attack_vectors.rs  custom_config_tests.rs  integration_phase1_test.rs  integration_tests.rs  ollama_phase1_tests.rs  performance_tests.rs  progression_validation.rs  property_tests.rs  security_level_tests.rs  standard_responses_test.rs  test_utilities.rs
tests/ollama_tests/: attack_prompts.json  benign_prompts.json  comprehensive_test_runner.rs
