[package]
name = "fluxprompt"
version = "0.1.0"
edition = "2021"
authors = ["FluxPrompt Team"]
license = "MIT"
description = "A Rust SDK for detecting and mitigating prompt injection attacks"
homepage = "https://github.com/fluxprompt/fluxprompt"
repository = "https://github.com/fluxprompt/fluxprompt"
readme = "README.md"
keywords = ["security", "ai", "prompt-injection", "llm", "detection"]
categories = ["security", "ai", "text-processing"]
rust-version = "1.70"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.0"
dashmap = "5.0"
rayon = "1.7"
tracing = "0.1"
thiserror = "1.0"
once_cell = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
urlencoding = "2.1"
hex = "0.4"
colored = "2.1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
dialoguer = "0.10"

[[bench]]
name = "detection_benchmarks"
harness = false

[features]
default = ["metrics"]
metrics = []
experimental = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]